--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "reaction-booster",
+  "name": "fb-autoliker",
   "version": "1.0.0",
-  "description": "A simple Express server to boost reactions on Facebook.",
-  "main": "index.js",
+  "description": "Facebook AutoLiker using Selenium and Express",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "chromedriver": "^126.0.0",
+    "express": "^4.19.2",
+    "selenium-webdriver": "^4.21.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
-  }
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "keywords": ["facebook", "autoliker", "selenium", "express"],
+  "author": "Your Name",
+  "license": "MIT"
 }
